# SimuBox

./: .dockerignore  .gitignore  Dockerfile  README.md  UPDATE_LOG.md  __init__.py  correlation.py  environment.yaml  pyproject.toml  requirements.txt  setup.py  xml.py
.github/workflows/: static.yml
AppGUI/: MainApp.ui
Apps/: Cli.py  Run.py
Apps/CommandLine/: CmdApp.py
Apps/Web/: 主页.py
Apps/WebGUI/: run.py  主页.py
Demos/: Scripts.ipynb
Docs/Figures/: SimuBox.ai
Docs/source/: conf.py
HTML/source/: Introduction.md  conf.py  index.rst
Lab/: grammar_sugar.ipynb
SimuBox/: Utils.py  __init__.py  run.py
SimuBox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SimuBox/Artist/: PlotUtils.py  __init__.py  compare.py  isosurface.py  landscape.py  phase.py  plotter.py
SimuBox/Calculator/: __init__.py  correlation.py  peak.py  scatter.py  topo.py  topos.py  voronoi.py
SimuBox/SCFTRunner/: ADD_ALIAS.sh  Utils.py  add_alias.py
SimuBox/Schema/: Enums.py  Labels.py  Structs.py  Types.py  __init__.py
SimuBox/SciCalc/: voronoi.py
SimuBox/SciPlot/: PlotUtils.py  land.py  phase.py
SimuBox/SciTools/: __init__.py  reader.py
SimuBox/ScriptRun/: ADD_ALIAS.sh  __init__.py
SimuBox/Toolkits/: Utils.py  __init__.py  _vectorize.py  function.py  generator.py  reader.py  vector.py  web_utils.py  xmltrans.py
SimuBox/Web/: Homepage.py  web_unit.py  主页.py
SimuBox/artist/: compare.py  isosurface.py  landscape.py  phase.py  plotter.py
SimuBox/calculator/: peak.py  scatter.py  topo.py  voronoi.py
SimuBox/runner/: __init__.py  manager.py
SimuBox/schema/: __init__.py  labels.py  types.py
SimuBox/script/: extractor.py  help.py  setenv.py  stress.py  transform_case.py  web.py
SimuBox/scripts/: extractor.py  push_job.py  (+2 more)
Source/: __init__.py
demo/: base.ipynb  iso_plot_trisurf.py  iso_vista.py  scatter_demo.py
demos/: scripts.ipynb
docs/: build_flow.md  objects.inv  py-modindex.html  searchindex.js
plotter/: compare.py  phase.py
src/: __init__.py  tools.py  voronoi.py
work/: 说明.md
(+247 files in other folders)
